<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="249dp"
        android:layout_height="43dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#EFECEC"
        android:textColorHint="#9E9898"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="68dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/well_cura"
        android:textColor="#ECE4E4"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="346dp"
        android:layout_height="111dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/empower_your_wellness_journey_your_online_pharmacy_destination"
        android:textAlignment="center"
        android:textColor="#C3BEBE"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="101dp"
        android:layout_height="33dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/login"
        android:textColor="#F6F4F4"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334"
         />

    <EditText
        android:id="@+id/editTextLoginUsername"
        android:layout_width="249dp"
        android:layout_height="43dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#EFECEC"
        android:textColorHint="#9E9898"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/input_bg"
        android:text="@string/go"
        android:textColor="#F3F1F1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/textViewNewUser"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:text="@string/register_now"
        android:textColor="#B5B3B3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.338" />

</androidx.constraintlayout.widget.ConstraintLayout>